# fdri-cookiecutter-pypackage

./: .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: pipeline.yml
CHANGELOG/: 0.1.0.md
_shared/hooks/: hook_utils.py
_shared/{{cookiecutter.package_name}}/: CITATION.cff  CONTRIBUTING.md  LICENSE.MIT  pyproject.toml
_shared/{{cookiecutter.package_name}}/docs/source/: conf.py
docs/: design_decisions.md  index.md  usage.md
docs/pypackage/: usage.md
docs/pyservice/: git-flows.md  releasing.md  usage-github.md  usage.md
hooks/: post_gen_project.py  pre_gen_project.py
pypackage/hooks/: post_gen_project.py
pyservice/: cookiecutter.json
pyservice/hooks/: post_gen_project.py
pyservice/{{cookiecutter.package_name}}/: LICENSE  README.md
pyservice/{{cookiecutter.package_name}}/.github/workflows/: pipeline.yml
scripts/: release.py
tests/: test_bake_project.py  test_bake_pyservice.py  test_cli.py  test_readme_author.py
{{cookiecutter.package_name}}/: CITATION.cff  CONTRIBUTING.md  LICENSE.MIT  README.md  pyproject.toml
{{cookiecutter.package_name}}/CHANGELOG/: {{ cookiecutter.first_version }}.md
{{cookiecutter.package_name}}/docs/source/: api.rst  conf.py  index.rst
{{cookiecutter.package_name}}/docs/source/_templates/partials/: nav-socials.html
{{cookiecutter.package_name}}/scripts/: bump.py  release.py
